k8s/game-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: game
  labels:
    auther: Tawfeeq
spec:
  type: ClusterIP
  ports:
    - targetPort: game-port
      port: 80
      protocol: TCP
  selector:
    app: game-app
